# Isaac-GR00T-VLM

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/: progress.md  unitA-brief.md  unitA-report.md  unitA-review-scoped.diff  unitA-review.diff  unitC-brief.md  unitC-report.md  unitD-brief.md  unitD-report.md
configs/: agentbot_skills.sample.json  default.yaml
docs/: architecture_dataflow.html  llm_vlm_finetuning_guide.html  project_report.html  vlm_lora_finetune.md
docs/plans/: 2026-06-21-vlm-brain-agentbot-integration.md  2026-06-21-vlm-brain-deployment.md  2026-06-21-vlm-brain-deployment.zh-Hant.md  2026-06-23-vqa-6phase-qwen3vl8b-4090.md  2026-06-23-vqa-6phase-qwen3vl8b-4090.zh-Hant.md
examples/: finetune_cosmos_r2_lora.sh  run_pegasus.py  run_vlm_server.sh
examples/sample_vqa/: data.jsonl
src/vlm_lora/: eval_toolcall.py  eval_vlm_vqa.py  gen_toolcall_data.py  gen_vqa_from_lerobot.py  hf_utils.py  infer_vlm.py  lora_args.py  merge_lora.py  swap_backbone.py  train_vlm_lora.py  vqa_dataset.py
src/vlm_lora/serve/: __init__.py  model.py  openai_app.py  toolcall.py
tests/: test_eval_toolcall.py  test_gen_toolcall_data.py  test_gen_vqa.py  test_lora_args.py  test_phase_sampling.py  test_serve_app.py  test_serve_toolcall.py  test_swap_backbone.py  test_vqa_dataset.py
